# sidreader

./: .gitignore  README.md  api.py  db.py  loader.py  parser.py  pyproject.toml
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/read/[docId]/: page.tsx
frontend/lib/: api.ts
